[package]
name = "mss32"
version = "1.0.0"
edition = "2021"

[package.metadata.rustflags]
windows = [
    "-C", "target-feature=+crt-static",
    "-C", "link-arg=-DISOLATION_AWARE_ENABLED=1",
    "-C", "link-arg=-static"
]

[dependencies.winapi]
version = "0.3.9"
features = [
    "minwindef",
    "processthreadsapi",
    "libloaderapi",
    "winuser",
    "shellapi",
    "memoryapi",
    "knownfolders",
    "shlobj",
    "combaseapi",
    "processenv",
    "winerror",
]

[build-dependencies]
nasm-rs = "0.3.1"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
debug = false
lto = true # turn on link-time-optimizations
strip = true # strip unused symbols
panic = 'abort' # abort on panic
opt-level = 's' # optimize for size
